--- a/.github/workflows/ci-pull-request-autoapprove-bot.yaml
+++ b/.github/workflows/ci-pull-request-autoapprove-bot.yaml
@@ -61,8 +61,24 @@ jobs:
     if: ${{ needs.check-pr.outputs.semver_skipped == 'false' }} && (github.actor == 'dependabot[bot]' || github.actor == 'BardezAnAvatar')
     steps:
 
-      - name: Checkout
-        uses: actions/checkout@v4
+      - name: Initial setup
+        run: |
+          git lfs uninstall
+          git config --global core.autocrlf false
+          git config --global core.ignorecase true
+
+      - name: Clone repository using 'github.ref' from release
+        uses: actions/checkout@master
+        with:
+          submodules: true
+
+      - name: Remove items from release
+        run: |
+          rm -r mod-thalantyr-ex/craftable-items/assets
+          rm mod-thalantyr-ex/craftable-items/LICENSE.md
+          rm mod-thalantyr-ex/craftable-items/README.md
+          rm mod-thalantyr-ex/craftable-items/reserved_strings.md
+
 
       - name: Create Infinity Engine Mod Packages (.iemod and .zip)
         uses: ALIENQuake/CreateIEModZipPackage@master
